# horalis

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  ci.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Dashboard.tsx  FloatingTimer.tsx  HistoryView.tsx
src/components/pages/: HistoryPage.tsx  ReportsPage.tsx  SettingsPage.tsx
src/lib/: db.ts
src/store/: index.ts
