[package]
name = "timetracker"
version = "0.1.0"
description = "A minimal time tracker with floating window"
authors = ["you"]
edition = "2021"

[lib]
name = "timetracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ab_glyph = "0.2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }

[dependencies.system-idle-time]
version = "1.0"
