[package]
name = "horalis"
version = "0.1.0"
description = "Horalis - A minimal time tracker"
authors = ["you"]
edition = "2021"

[lib]
name = "horalis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ab_glyph = "0.2"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
system-idle-time = "1.0"
rusqlite = "0.32"
directories = "5.0"

# macOS-specific: enable private API for features like tray title
[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
